--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,14 @@
-// Place all the styles related to the Users controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+#sign-up-panel {
+  @extend .col-3;
+  @extend .col-m-5;
+  @extend .authentication-panel;
+  margin: 1em;
+}
+
+.sign-up-error {
+  @extend .error;
+}
+
+.sign-up-field-with-error {
+  @extend .field-with-error;
+}
