--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,16 @@
   </head>
 
   <body>
-    <% if current_user %>
-      Signed in as <%= current_user.name %> | <%= link_to 'Log out', log_out_path %>
-    <% else %>
-      <%= link_to 'Log in', log_in_path %> | <%= link_to 'Sign up', sign_up_path %>
-    <% end %>
+    <div>
+      <% if current_user %>
+        Signed in as <%= current_user.name %> | <%= link_to 'Log out', log_out_path %>
+      <% else %>
+        <%= link_to 'Log in', log_in_path %> | <%= link_to 'Sign up', sign_up_path %>
+      <% end %>
+    </div>
 
-    <%= yield %>
+    <div id="app-container">
+      <%= yield %>
+    </div>
   </body>
 </html>
