--- a/app/views/users/_password_confirmation_field.html.erb
+++ b/app/views/users/_password_confirmation_field.html.erb
@@ -1,3 +1,3 @@
-<%= form.text_field :password_confirmation, class: class_name,
-                           placeholder: 'Enter password confirmation',
-                           onkeydown: "App.focusOn('submit')" %>
+<%= form.password_field :password_confirmation, class: class_name,
+                                                placeholder: 'Enter password confirmation',
+                                                onkeydown: "App.focusOn('submit')" %>
