--- a/app/views/users/_password_field.html.erb
+++ b/app/views/users/_password_field.html.erb
@@ -1,3 +1,3 @@
-<%= form.text_field :password, class: class_name,
-                           placeholder: 'Enter password',
-                           onkeydown: "App.focusOn('user_password_confirmation')" %>
+<%= form.password_field :password, class: class_name,
+                                   placeholder: 'Enter password',
+                                   onkeydown: "App.focusOn('user_password_confirmation')" %>
