Less Bootstrap in authentication

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,76 +1,62 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-@import "*";
+@import "responsiveness";
+@import "variables";
 
-/* For responsiveness --------------------------------------------------------*/
-/* General */
-.app-row::after {
-  content: "";
-  clear: both;
-  display: block;
-}
-
-/* For mobile phones: */
-[class*="column-"] {
-  width: 100%;
-  box-sizing: border-box;
-  display: inline-block;
-}
-
-@media only screen and (min-width: 430px) {
-  /* For tablets: */
-  .column-m-1  { width: 8.33%;  box-sizing: border-box; display: inline-block; }
-  .column-m-2  { width: 16.66%; box-sizing: border-box; display: inline-block; }
-  .column-m-3  { width: 25%;    box-sizing: border-box; display: inline-block; }
-  .column-m-4  { width: 33.33%; box-sizing: border-box; display: inline-block; }
-  .column-m-5  { width: 41.66%; box-sizing: border-box; display: inline-block; }
-  .column-m-6  { width: 50%;    box-sizing: border-box; display: inline-block; }
-  .column-m-7  { width: 58.33%; box-sizing: border-box; display: inline-block; }
-  .column-m-8  { width: 66.66%; box-sizing: border-box; display: inline-block; }
-  .column-m-9  { width: 75%;    box-sizing: border-box; display: inline-block; }
-  .column-m-10 { width: 83.33%; box-sizing: border-box; display: inline-block; }
-  .column-m-11 { width: 91.66%; box-sizing: border-box; display: inline-block; }
-  .column-m-12 { width: 100%;   box-sizing: border-box; display: inline-block; }
-}
-
-@media only screen and (min-width: 780px) {
-  /* For desktop: */
-  .column-1  { width: 8.33%;  box-sizing: border-box; display: inline-block; }
-  .column-2  { width: 16.66%; box-sizing: border-box; display: inline-block; }
-  .column-3  { width: 25%;    box-sizing: border-box; display: inline-block; }
-  .column-4  { width: 33.33%; box-sizing: border-box; display: inline-block; }
-  .column-5  { width: 41.66%; box-sizing: border-box; display: inline-block; }
-  .column-6  { width: 50%;    box-sizing: border-box; display: inline-block; }
-  .column-7  { width: 58.33%; box-sizing: border-box; display: inline-block; }
-  .column-8  { width: 66.66%; box-sizing: border-box; display: inline-block; }
-  .column-9  { width: 75%;    box-sizing: border-box; display: inline-block; }
-  .column-10 { width: 83.33%; box-sizing: border-box; display: inline-block; }
-  .column-11 { width: 91.66%; box-sizing: border-box; display: inline-block; }
-  .column-12 { width: 100%;   box-sizing: border-box; display: inline-block; }
-}
+@import "users";
+@import "sessions";
+@import "home";
 
 /*----------------------------------------------------------------------------*/
-
-.authentication-panel {
-  box-shadow: 5px 5px 20px gray;
-}
-
-.app-panel {
-  box-shadow: 5px 5px 20px gray;
-}
-
-.error {
-  padding: 0px 1em;
-  margin: 2px 0 0 0;
-}
-
-.field-with-error {
-  /* border-color: #ff6666; */
-  @extend .has-error;
-}
 
 #app-container {
   font-size: 0;
   /* http://stackoverflow.com/questions/2628050/ignore-whitespace-in-html */
+}
+
+.authentication-container {
+  @extend .column-3;
+  @extend .column-m-4;
+
+  border: 5px solid transparent;
+}
+
+.authentication {
+  font-size: $font-size;
+  box-shadow: $box-shadow;
+  border-radius: $border-radius;
+}
+
+.authentication-heading {
+  padding: 10px 15px;
+  background-color: #f5f5f5;
+  border: 1px solid #dddddd;
+  border-top-left-radius: inherit;
+  border-top-right-radius: inherit;
+}
+
+.authentication-body {
+  padding: 15px;
+  background-color: #fff;
+  border-left: 1px solid #dddddd;
+  border-right: 1px solid #dddddd;
+}
+
+.authentication-footer {
+  padding: 10px 15px;
+  background-color: #f5f5f5;
+  border: 1px solid #dddddd;
+  border-bottom-left-radius: inherit;
+  border-bottom-right-radius: inherit;
+}
+
+.authentication-error {
+  padding: 0px 1em;
+  margin: 2px 0 0 0;
+}
+
+.authentication-field-with-error {
+  /* border-color: #ff6666; */
+  /* @extend .has-error; */
 }
