--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,15 +1,19 @@
-<%= content_tag :div, class: 'panel panel-default', id: 'sign-up-panel' do %>
+<%= content_tag :div, class: 'sign-up-container' do %>
 
-  <%= content_tag :div, class: 'panel-heading' do %>
-    <%= content_tag :h2, 'Sign Up' %>
-  <% end %>
+  <%= content_tag :div, class: 'sign-up' do %>
 
-  <%= content_tag :div, class: 'panel-body' do %>
-    <%= render 'form', user: @user %>
+    <%= content_tag :div, class: 'sign-up-heading' do %>
+      <%= content_tag :h2, 'Sign Up' %>
+    <% end %>
+
+    <%= content_tag :div, class: 'sign-up-body' do %>
+      <%= render 'form', user: @user %>
+    <% end  %>
+
+    <%= content_tag :div, class: 'sign-up-footer' do %>
+      Already have an account? <%= link_to 'Log in', log_in_path %>
+    <% end %>
+
   <% end  %>
 
-  <%= content_tag :div, class: 'panel-footer' do %>
-    Already have an account? <%= link_to 'Log in', log_in_path %>
-  <% end %>
-
-<% end  %>
+<% end %>
