--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,7 +10,7 @@
 
 /*----------------------------------------------------------------------------*/
 
-#app-container {
+.application-body {
   font-size: 0;
   /* http://stackoverflow.com/questions/2628050/ignore-whitespace-in-html */
 }
