--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,23 +1,7 @@
-<%= render 'tweet', image_source: 'CvAUy5aWYAAJH7b.jpg',
-                    creation_time: '2016-10-18 07:29:43 +0000',
-                    twitter_user_name: 'Lamborghini' %>
-
-<%= render 'tweet', image_source: 'Cu6WF53WAAA8CSH.jpg',
-                    creation_time: '2016-10-18 07:29:43 +0000',
-                    twitter_user_name: 'Lamborghini' %>
-
-<%= render 'tweet', image_source: 'CvaBTwqW8AE1p3l.jpg',
-                    creation_time: '2016-10-18 07:29:43 +0000',
-                    twitter_user_name: 'Lamborghini' %>
-
-<%= render 'tweet', image_source: 'CvO6fRSVMAEC3Dy.jpg',
-                    creation_time: '2016-10-18 07:29:43 +0000',
-                    twitter_user_name: 'Lamborghini' %>
-
-<%= render 'tweet', image_source: 'Cur5lziWgAAxQS4.jpg',
-                    creation_time: '2016-10-18 07:29:43 +0000',
-                    twitter_user_name: 'Lamborghini' %>
-
-<%= render 'tweet', image_source: 'CveXPd2WAAEU0BL.jpg',
-                    creation_time: '2016-10-18 07:29:43 +0000',
-                    twitter_user_name: 'Lamborghini' %>
+<%= @tweets.each do |tweet| %>
+  <% unless tweet.media.blank? %>
+    <%= render 'tweet', image_source: tweet.media[0].media_url,
+                        creation_time: tweet.created_at,
+                        twitter_user_name: tweet.user.name %>
+  <% end %>
+<% end  %>
