--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
       <% end %>
     </div>
 
-    <div id="app-container">
+    <div class="application-body">
       <%= yield %>
     </div>
   </body>
