--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>SimpleAuthenticationWithBcryptDemo</title>
+    <title>SimpleApplication</title>
     <%= csrf_meta_tags %>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
   <body>
-    <div>
-      <% if current_user %>
-        Signed in as <%= current_user.name %> | <%= link_to 'Log out', log_out_path %>
-      <% else %>
-        <%= link_to 'Log in', log_in_path %> | <%= link_to 'Sign up', sign_up_path %>
-      <% end %>
-    </div>
-
+    <% if current_user %>
+      Signed in as <%= current_user.name %> | <%= link_to 'Log out', log_out_path %>
+    <% else %>
+      <%= link_to 'Log in', log_in_path %> | <%= link_to 'Sign up', sign_up_path %>
+    <% end %>
+    
     <div class="application-body">
       <%= yield %>
     </div>
