--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,13 +9,18 @@
   </head>
   <body>
     <% if current_user %>
-      Signed in as <%= current_user.name %> | <%= link_to 'Log out', log_out_path %>
+      Signed in as <%= current_user.name %> | <%= link_to 'Log out', log_out_path %> |
     <% else %>
       <%= link_to 'Log in', log_in_path %> | <%= link_to 'Sign up', sign_up_path %>
     <% end %>
-    
-    <div class="application-body">
+
+    <div id="application-body">
       <%= yield %>
     </div>
+
+    <% if current_user %>
+      <%= link_to 'More Tweets', root_path, remote: true,
+                                            class: 'btn btn-primary' %>
+    <% end %>
   </body>
 </html>
